--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,16 @@
     <properties>
         <java.version>17</java.version>
     </properties>
-
-    <dependencies>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
+    <scm>
+        <developerConnection>scm:git:https://github.com/Goenena/sfg-pet-clinic.git</developerConnection>
+    </scm>
 
 </project>
